tests/frontend/fail/array/create_arg_atomic_array_mismatch.act
constructor of A
interface constructor(int x)


constructor of B
interface constructor()

creates
  A a := create A([[1,2,3],[4,5]])
